@@ -4060,10 +4060,12 @@ in parole mode fails the hash check, it is banned. If a peer participates in a
 piece that passes the hash check, it is taken out of parole mode.
 
 ``cache_size`` is the disk write and read  cache. It is specified in units of
-16 KiB blocks. It defaults to 1024 (= 16 MB). Buffers that are part of a peer's
-send or receive buffer also count against this limit. Send and receive buffers
-will never be denied to be allocated, but they will cause the actual cached blocks
-to be flushed or evicted.
+16 KiB blocks. Buffers that are part of a peer's send or receive buffer also
+count against this limit. Send and receive buffers will never be denied to be
+allocated, but they will cause the actual cached blocks to be flushed or evicted.
+If this is set to -1, the cache size is automatically set to the amount
+of physical RAM available in the machine divided by 8. If the amount of physical
+RAM cannot be determined, it's set to 1024 (= 16 MiB).
 
 Disk buffers are allocated using a pool allocator, the number of blocks that
 are allocated at a time when the pool needs to grow can be specified in
